--- a/second.html
+++ b/second.html
@@ -12,11 +12,10 @@
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-
 <body>
    
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="./index.html"><img class='headerimg'
                 src="https://images-beta.tossdown.com/site/65b73fb7-2706-4440-87b9-9555fcd0ba80.webp" alt=""></a>
@@ -47,7 +46,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./second.html">template 2</a>
+                    <a class="nav-link" href="#">About us</a>
                   </li>
                 </ul>
               </div>
@@ -60,15 +59,15 @@
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
                 <img src="./banner.jpg"
-                    class="d-block w-100" style="height: 70vh; object-fit: cover;" alt="...">
+                    class="d-block w-100" style="height: 60vh; object-fit: cover;" alt="...">
             </div>
             <div class="carousel-item" data-bs-interval="2000">
                 <img src="./banner.jpg"
-                    class="d-block w-100" style="height: 70vh; object-fit: cover;" alt="...">
+                    class="d-block w-100" style="height: 60vh; object-fit: cover;" alt="...">
             </div>
             <div class="carousel-item">
                 <img src="./banner.jpg"
-                    class="d-block w-100" style="height: 70vh; object-fit: cover;" alt="...">
+                    class="d-block w-100" style="height: 60vh; object-fit: cover;" alt="...">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
@@ -83,23 +82,8 @@
         </button>
     </div>
 
-    <!-- About Section -->
-    <!-- <section class="container py-5">
-        <h2 class="text-center mb-4">About Us</h2>
-        <div class="row">
-            <div class="col-lg-6">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac erat velit. Vivamus eget tortor et eros aliquam sollicitudin at ut velit.</p>
-            </div>
-            <div class="col-lg-6">
-                <img src="https://via.placeholder.com/400" class="img-fluid" alt="About Image">
-            </div>
-        </div>
-    </section> -->
-
-
 
 <!-- Best seller Products -->
-<h2 class="text-center" >Best Sellers</h2>
 <div class="d-flex justify-content-around align-items-center bg-light p-4 row">
     <div class="card col-12 col-sm-6 col-md-4 col-lg-3" style="width: 18rem;"> <a href="https://the-master-jackets.vercel.app/">
         <img src="https://www.angeljackets.com/product_images/q/353/reeves_black_leather_jacket__11910_zoom.webp" class="card-img-top transform-example" alt="..."></a>
@@ -214,61 +198,6 @@
     </div>
 </div>
 
-<!-- NEW Arrivals -->
-<h2 class="text-center" >New Arrivals</h2>
-<div class="d-flex justify-content-around align-items-center bg-light p-4 row">
-    <div class="card col-12 col-sm-6 col-md-4 col-lg-3" style="width: 18rem;"> <a href="https://the-master-jackets.vercel.app/">
-        <img src="https://www.angeljackets.com/product_images/q/353/reeves_black_leather_jacket__11910_zoom.webp" class="card-img-top transform-example" alt="..."></a>
-        <div class="card-body">
-            <h6 class="card-title">Men's Black Harrington </h6>
-            <p class="card-text fs-5"><span class="fs-6 discount" >$249.00</span> $189.00 <span class="star-rating">★★★★</span></p>
-        </div>
-    </div>
-    <div class="card col-12 col-sm-6 col-md-4 col-lg-3" style="width: 18rem;"> <a href="https://the-master-jackets.vercel.app/">
-        <img src="https://www.angeljackets.com/product_images/q/353/reeves_black_leather_jacket__11910_zoom.webp" class="card-img-top transform-example" alt="..."></a>
-        <div class="card-body">
-            <h6 class="card-title">Men's Black Harrington </h6>
-            <p class="card-text fs-5"><span class="fs-6 discount" >$249.00</span> $189.00 <span class="star-rating">★★★★</span></p>
-        </div>
-    </div><div class="card col-12 col-sm-6 col-md-4 col-lg-3" style="width: 18rem;"> <a href="https://the-master-jackets.vercel.app/">
-        <img src="https://www.angeljackets.com/product_images/q/353/reeves_black_leather_jacket__11910_zoom.webp" class="card-img-top transform-example" alt="..."></a>
-        <div class="card-body">
-            <h6 class="card-title">Men's Black Harrington </h6>
-            <p class="card-text fs-5"><span class="fs-6 discount" >$249.00</span> $189.00 <span class="star-rating">★★★★</span></p>
-        </div>
-    </div><div class="card col-12 col-sm-6 col-md-4 col-lg-3" style="width: 18rem;"> <a href="https://the-master-jackets.vercel.app/">
-        <img src="https://www.angeljackets.com/product_images/q/353/reeves_black_leather_jacket__11910_zoom.webp" class="card-img-top transform-example" alt="..."></a>
-        <div class="card-body">
-            <h6 class="card-title">Men's Black Harrington </h6>
-            <p class="card-text fs-5"><span class="fs-6 discount" >$249.00</span> $189.00 <span class="star-rating">★★★★</span></p>
-        </div>
-    </div><div class="card col-12 col-sm-6 col-md-4 col-lg-3" style="width: 18rem;"> <a href="https://the-master-jackets.vercel.app/">
-        <img src="https://www.angeljackets.com/product_images/q/353/reeves_black_leather_jacket__11910_zoom.webp" class="card-img-top transform-example" alt="..."></a>
-        <div class="card-body">
-            <h6 class="card-title">Men's Black Harrington </h6>
-            <p class="card-text fs-5"><span class="fs-6 discount" >$249.00</span> $189.00 <span class="star-rating">★★★★</span></p>
-        </div>
-    </div>
-    <div class="card col-12 col-sm-6 col-md-4 col-lg-3" style="width: 18rem;"> <a href="https://the-master-jackets.vercel.app/">
-        <img src="https://www.angeljackets.com/product_images/q/353/reeves_black_leather_jacket__11910_zoom.webp" class="card-img-top transform-example" alt="..."></a>
-        <div class="card-body">
-            <h6 class="card-title">Men's Black Harrington </h6>
-            <p class="card-text fs-5"><span class="fs-6 discount" >$249.00</span> $189.00 <span class="star-rating">★★★★</span></p>
-        </div>
-    </div><div class="card col-12 col-sm-6 col-md-4 col-lg-3" style="width: 18rem;"> <a href="https://the-master-jackets.vercel.app/">
-        <img src="https://www.angeljackets.com/product_images/q/353/reeves_black_leather_jacket__11910_zoom.webp" class="card-img-top transform-example" alt="..."></a>
-        <div class="card-body">
-            <h6 class="card-title">Men's Black Harrington </h6>
-            <p class="card-text fs-5"><span class="fs-6 discount" >$249.00</span> $189.00 <span class="star-rating">★★★★</span></p>
-        </div>
-    </div><div class="card col-12 col-sm-6 col-md-4 col-lg-3" style="width: 18rem;"> <a href="https://the-master-jackets.vercel.app/">
-        <img src="https://www.angeljackets.com/product_images/q/353/reeves_black_leather_jacket__11910_zoom.webp" class="card-img-top transform-example" alt="..."></a>
-        <div class="card-body">
-            <h6 class="card-title">Men's Black Harrington </h6>
-            <p class="card-text fs-5"><span class="fs-6 discount" >$249.00</span> $189.00 <span class="star-rating">★★★★</span></p>
-        </div>
-    </div>
-</div>
 
 <!-- Customer Gallery -->
   <div class="container mt-5 pt-5">
@@ -314,8 +243,8 @@
   </div>
   
 <br>
- <!-- footer////////////// text-light data-bs-theme="dark" -->
-  <footer class="bg-body-tertiary text-center text-light bg-dark" data-bs-theme="dark" >
+ <!-- footer////////////// -->
+  <footer class="bg-body-tertiary text-center">
         <!-- Grid container -->
         <div class="container p-4 pb-0">
             <!-- Section: Social media -->
