Men Leather Jacket

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         </div>
                         
                         <div class="fs-nav-item">
-                            <a href="#" class="fs-main-link">Men <i class="fas fa-chevron-down" style="font-size: 10px; margin-left: 5px;"></i></a>
+                            <a href="./men-leather-jackets.html" class="fs-main-link">Men <i class="fas fa-chevron-down" style="font-size: 10px; margin-left: 5px;"></i></a>
                             <div class="fs-dropdown-menu">
                                 <div class="fs-dropdown-title">Categories</div>
                                 <a href="#">Shirts</a>
