checking live server

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <nav class="fs-nav-container">
                     <div class="fs-nav-links">
                         <div class="fs-nav-item">
-                            <a href="#" class="fs-main-link">Women <i class="fas fa-chevron-down" style="font-size: 10px; margin-left: 5px;"></i></a>
+                            <a href="./women.html" class="fs-main-link">Women <i class="fas fa-chevron-down" style="font-size: 10px; margin-left: 5px;"></i></a>
                             <div class="fs-dropdown-menu">
                                 <div class="fs-dropdown-title">Categories</div>
                                 <a href="#">Dresses</a>
@@ -142,7 +142,7 @@
                     </div>
   
                     <div class="fs-nav-item">
-                        <a href="./second.html" class="fs-main-link">Sale</a>
+                        <a href="./contact-us.html" class="fs-main-link">Contact Us</a>
                     </div>
                 </div>
             </nav>
