return page incomplete

--- a/men-leather-jackets.html
+++ b/men-leather-jackets.html
@@ -141,8 +141,16 @@
                     </div>
   
                     <div class="fs-nav-item">
-                        <a href="./contact-us.html" class="fs-main-link">Contact Us</a>
-                    </div>
+                            <a href="./about.html" class="fs-main-link">Brand<i class="fas fa-chevron-down" style="font-size: 10px; margin-left: 5px;"></i></a>
+                            <div class="fs-dropdown-menu">
+                                <a href="./about.html">About us</a>
+                                <a href="./contact-us.html">Contact us</a>
+                            </div>
+                            <div class="fs-mobile-submenu">
+                                <a href="./about.html">About us</a>
+                               <a href="./contact-us.html">Contact us</a>
+                            </div>
+                        </div>
                 </div>
             </nav>
   
