--- a/product-page.html
+++ b/product-page.html
@@ -280,7 +280,7 @@
                 reviews: 128,
                 category: "electronics",
                 badge: "sale",
-                image: "https://via.placeholder.com/300",
+                image: "https://picsum.photos/300/200?random=5",
                 dateAdded: "2023-10-15"
             },
             {
@@ -292,7 +292,7 @@
                 reviews: 256,
                 category: "electronics",
                 badge: null,
-                image: "https://via.placeholder.com/300",
+                image: "https://picsum.photos/300/200?random=6",
                 dateAdded: "2023-11-20"
             },
             {
@@ -304,7 +304,7 @@
                 reviews: 42,
                 category: "clothing",
                 badge: null,
-                image: "https://via.placeholder.com/300",
+                image: "https://picsum.photos/300/200?random=7",
                 dateAdded: "2023-09-05"
             },
             {
@@ -316,7 +316,7 @@
                 reviews: 87,
                 category: "home",
                 badge: "new",
-                image: "https://via.placeholder.com/300",
+                image: "https://picsum.photos/300/200?random=8",
                 dateAdded: "2023-12-01"
             },
             {
@@ -328,7 +328,7 @@
                 reviews: 112,
                 category: "electronics",
                 badge: null,
-                image: "https://via.placeholder.com/300",
+                image: "https://picsum.photos/300/200?random=9",
                 dateAdded: "2023-10-30"
             },
             {
@@ -340,7 +340,7 @@
                 reviews: 201,
                 category: "electronics",
                 badge: "bestseller",
-                image: "https://via.placeholder.com/300",
+                image: "https://picsum.photos/300/200?random=10",
                 dateAdded: "2023-08-12"
             },
             {
@@ -352,7 +352,7 @@
                 reviews: 156,
                 category: "clothing",
                 badge: "sale",
-                image: "https://via.placeholder.com/300",
+                image: "https://picsum.photos/300/200?random=11",
                 dateAdded: "2023-11-15"
             },
             {
@@ -364,7 +364,7 @@
                 reviews: 189,
                 category: "electronics",
                 badge: null,
-                image: "https://via.placeholder.com/300",
+                image: "https://picsum.photos/300/200?random=12",
                 dateAdded: "2023-12-05"
             }
         ];
