--- a/index.html
+++ b/index.html
@@ -147,12 +147,12 @@
                             <div class="fs-dropdown-menu">
                                 <a href="./about.html">About us</a>
                                 <a href="./contact-us.html">Contact us</a>
-                                <a href="./return&exchanges.html">Return & Exchanges</a>
+                                <a href="./return&exchange.html">Return & Exchange</a>
                             </div>
                             <div class="fs-mobile-submenu">
                                 <a href="./about.html">About us</a>
                                <a href="./contact-us.html">Contact us</a>
-                               <a href="./return&exchanges.html">Return & Exchanges</a>
+                               <a href="./return&exchange.html">Return & Exchange</a>
                             </div>
                         </div>
                 </div>
