font add helvetica

--- a/return&exchange.html
+++ b/return&exchange.html
@@ -21,7 +21,7 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Georgia', 'Times New Roman', serif;
+            font-family: Arial, Helvetica, sans-serif;
         }
 
         body {
@@ -322,7 +322,7 @@
         <section class="cta-section">
             <h2>Need Help With Your Return?</h2>
             <p>Our customer service team is here to assist you with any questions about returns or exchanges.</p>
-            <a href="mailto:returns@yourbrand.com" class="cta-btn">Contact Returns Team</a>
+            <a href="./contact-us.html" class="cta-btn">Contact Returns Team</a>
         </section>
 
         <!-- Exceptions Section -->
