--- a/return&exchange.html
+++ b/return&exchange.html
@@ -21,7 +21,7 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
         }
 
         body {
@@ -29,7 +29,9 @@
             color: var(--dark-brown);
             line-height: 1.7;
         }
-
+        /* h1,h2,h3,h4,h5,h6{
+            letter-spacing: 0.01em;
+        } */
         .container {
             max-width: 1200px;
             margin: 0 auto;
